--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,8 @@
             <link href="/static/css/index.css" rel="stylesheet">
             <link href="/static/css/form.css" rel="stylesheet">
             <link href="/static/css/login.css" rel="stylesheet">
+            <link href="/static/css/profile.css" rel="stylesheet">
+            <link href="/static/css/all_events.css" rel="stylesheet">
 
         
             {% block head %} {% endblock %}
