Create all events and event details section. Add background image

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
             <link href="/static/css/login.css" rel="stylesheet">
             <link href="/static/css/profile.css" rel="stylesheet">
             <link href="/static/css/all_events.css" rel="stylesheet">
+            <link href="/static/css/event_details.css" rel="stylesheet">
 
         
             {% block head %} {% endblock %}
