--- a/templates/event_details.html
+++ b/templates/event_details.html
@@ -4,7 +4,32 @@
 
 {% block body %}
 
-<h3>{{ event.event_name }}</h3>
+<div id="event-details" class="event-details">
+  <div class="container">
+    <h1>{{ event.event_name }}</h1>
+    <p>
+    {{ event.event_description }}
+    </p>
+    <p>
+    <strong>Starts:</strong> {{ event_start_date }} 
+    </p>
+    <p>
+    <strong>Ends:</strong> {{ event_end_date }} 
+    </p>
+    <a href="/register">Register</a>
+  </div>
+</div>
+
+<div id="event-photo" class="event-photo">
+  <div class="container">
+    
+  </div>
+  <p>
+    <img src="{{ event.event_photo }}">
+  </p>
+</div>
+
+<!-- <h3>{{ event.event_name }}</h3>
   <p>
   {{ event.event_description }}
   </p>
@@ -17,6 +42,6 @@
   <a href="/register">Register</a>
   <p>
     <img src="{{ event.event_photo }}">
-  </p>
+  </p> -->
 
 {% endblock %}
