--- a/static/css/event_details.css
+++ b/static/css/event_details.css
@@ -28,6 +28,8 @@ text-transform: uppercase;
 /* EVENT PHOTO */
 
 .event-photo img {
-  margin: 40px;
+  height: 450px;
+  width: 850px;
+  margin: 20px 40px 0 40px;
 
 }
