--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
             <link href="/static/css/profile.css" rel="stylesheet">
             <link href="/static/css/all_events.css" rel="stylesheet">
             <link href="/static/css/event_details.css" rel="stylesheet">
+            <link href="/static/css/category_events.css" rel="stylesheet">
 
         
             {% block head %} {% endblock %}
