Create registration and confirmation css templates. Add background image

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
             <link href="/static/css/all_events.css" rel="stylesheet">
             <link href="/static/css/event_details.css" rel="stylesheet">
             <link href="/static/css/category_events.css" rel="stylesheet">
+            <link href="/static/css/register.css" rel="stylesheet">
+            <link href="/static/css/thanks.css" rel="stylesheet">
+
 
         
             {% block head %} {% endblock %}
