--- a/templates/category_events.html
+++ b/templates/category_events.html
@@ -4,6 +4,28 @@
 
 {% block body %} 
 
+<div id="event-category" class="event-category">
+  <div class="container">
+    <h1>Choose the virtual event category you would like to view:</h1>
+    <form action="/api/category" id ="category" method = "POST">
+      <select name="types" id = "types">
+        <option value="select">Select</option>
+        <option value="activity">Activity</option>
+        <option value="celebration">Celebration</option>
+        <option value="educational">Educational</option>
+        <option value="entertainment">Entertainment</option>
+      </select>
+      <button type="submit" class="btn btn-dark">Submit</button>
+  </form>
+</p>
+  <ul id ="event_results">
+  </ul>
+  </div>
+</div>
+
+<!-- <button type="button" class="btn btn-dark">Dark</button>
+
+
 <p>Choose the virtual event category you would like to view:</p>
   <form action="/api/category" id ="category" method = "POST">
       <select name="types" id = "types">
@@ -17,7 +39,7 @@
   </form>
 </p>
   <ol id ="event_results">
-  </ol>
+  </ol> -->
 
 {% endblock %} 
 
