--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -7,7 +7,7 @@
 <div id="confirmation-header" class="confirmation-header">
   <div class="container">
     <h1>Thank you for registering!</h1>
-    <p>We've sent you a text message confirmation</p> 
+    <p>We've sent you a text message confirmation.</p> 
     <p>Be safe and remember to enjoy your online virtual social session.</p> 
     <div class="row">
       <div class="col-lg-3 col-md-3">
