Fix form errors

--- a/templates/login.html
+++ b/templates/login.html
@@ -25,14 +25,13 @@
       <div class="col-6">
         <main class="form-login">
           <form action="/login" id="login" method="POST">
-            <!-- <img class="mb-4" src="../img/background/tablet-6110623_1280.png" alt="" width="72" height="57"> -->
             <h1 class="h3 mb-3 fw-normal">To view profile, please log-in:</h1>
             <div class="form-floating">
-              <input type="email" class="form-control" id="floatingEmail" placeholder="jdoe@test.com">
+              <input name="email" type="email" class="form-control" id="floatingEmail" placeholder="jdoe@test.com">
               <label for="floatingPassword">Email</label>
             </div>
             <div class="form-floating">
-              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+              <input name="password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
               <label for="floatingPassword">Password</label>
             </div>
         
