--- a/static/css/index.css
+++ b/static/css/index.css
@@ -65,17 +65,12 @@
 
 /* FOOTER */
 
-/* #my-footer {
-  font-size: 26px;
+#my-footer {
+  font-size: 30px;
   margin: 0 10px 0 0;
   color: #000000;
   text-decoration: none;
-  background: #b7b6b6;
-  padding: 10px;
-  box-sizing: border-box;
-  width: 50px;
-  text-align: center;
-} */
+}
 
 
 /* .background_img {   
