--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,8 @@
                 integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
             <!-- Font Awesome CDN -->
-            <script src="https://use.fontawesome.com/589931c264.js"></script>
+            <!-- <script src="https://use.fontawesome.com/589931c264.js"></script> -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js" crossorigin></script>
 
 
             <!-- Google Fonts -->
@@ -36,7 +37,7 @@
     <body>
 
         <!-- if user_is is None...else  -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
             <a class="navbar-brand" href="/">SocialSesh</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
