--- a/templates/form.html
+++ b/templates/form.html
@@ -46,23 +46,23 @@
             <h1 class="h3 mb-3 fw-normal">To create profile, fill out the following:</h1>
 
             <div class="form-floating">
-              <input type="fname" class="form-control" id="floatingFirst" placeholder="Jane">
+              <input name="fname" type="fname" class="form-control" id="floatingFirst" placeholder="Jane">
               <label for="floatingInput">First name</label>
             </div>
             <div class="form-floating">
-              <input type="lname" class="form-control" id="floatingLast" placeholder="Doe">
+              <input name="lname" type="lname" class="form-control" id="floatingLast" placeholder="Doe">
               <label for="floatingInput">Last name</label>
             </div>
             <div class="form-floating">
-              <input type="email" class="form-control" id="floatingEmail" placeholder="jdoe@test.com">
+              <input name="email" type="email" class="form-control" id="floatingEmail" placeholder="jdoe@test.com">
               <label for="floatingPassword">Email</label>
             </div>
             <div class="form-floating">
-              <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+              <input name="password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
               <label for="floatingPassword">Password</label>
             </div>
             <div class="form-floating">
-              <input type="phone" class="form-control" id="floatingPhone" placeholder="Phone">
+              <input name="phone" type="phone" class="form-control" id="floatingPhone" placeholder="Phone">
               <label for="floatingPassword">Phone</label>
             </div>
 
