--- a/templates/index.html
+++ b/templates/index.html
@@ -33,43 +33,34 @@
             SocialSesh is a online platform that offers a place to meet with people all over the world. By attending online virtual events, you can maintain safe human interaction that will keep relationships alive.
         </p>
         <div class="row">
-            <div class="col-lg-4 col-md-4"></div>
+            <div class="col-lg-4 col-md-4">
                 <h4>Connect</h4>
                 <p>Meet with others who share similar interests.</p>
-            <div class="col-lg-4 col-md-4"></div>
+            </div>
+            <div class="col-lg-4 col-md-4">
                 <h4>Create</h4>
                 <p>Set up events that bring value and importance to the community.</p>
-            <div class="col-lg-4 col-md-4"></div>
+            </div>
+            <div class="col-lg-4 col-md-4">
                 <h4>Contribute</h4>
                 <p>Support others ideas by attending events that catch your eye.</p>
+            </div>
         </div>
     </div>
 </div>
 
-<!-- <div id="social-media" class="social-media">
-    <div class="container">
-        <div class="row">
-            <a href="https://twitter.com" class="fab fa-twitter"></a>
-            <a href="https://facebook.com" class="fab fa-facebook-f"></a>
-            <a href="https://pinterest.com" class="fab fa-pinterest"></a>
-            <a href="https://instagram.com" class="fab fa-instagram"></a>
-            <a href="https://plus.google.com" class="fab fa-google-plus-g"></a>
-        </div>
-    </div>
-</div> -->
-
-<!-- <footer id="my-footer" class="text-center page-footer font-small">
+<footer id="my-footer" class="text-center page-footer font-small">
     <div class="container">
         <div class="row">
             <div class="col">
                 <div class="mb-5 flex-center">
-                    <a href="https://github.com" class="fab fa-github"></a>
-                    <a href="https://twitter.com" class="fab fa-twitter"></a>
-                    <a href="https://linkedin.com" class="fab fa-linkedin-f"></a>
+                    <a href="https://github.com/senseofsteph/SocialSesh" class="fab fa-github"  target="_blank"></a>
+                    <a href="https://twitter.com" class="fab fa-twitter"  target="_blank"></a>
+                    <a href="https://linkedin.com" class="fab fa-linkedin"  target="_blank"></a>
                 </div>
             </div>
         </div>
     </div>
-</footer> -->
+</footer>
 
 {% endblock %}
