--- a/templates/register.html
+++ b/templates/register.html
@@ -13,7 +13,7 @@
               <!-- <img class="mb-4" src="../img/background/tablet-6110623_1280.png" alt="" width="72" height="57"> -->
               <h1 class="h3 mb-3 fw-normal">To register for event, enter your phone number:</h1>
               <div class="form-floating">
-                <input type="text" class="form-control" id="phone" placeholder="Phone">
+                <input name="phone" type="text" class="form-control" id="phone" placeholder="Phone">
                 <label for="phone">Phone</label>
               </div>
               <button class="btn btn-dark btn-lg" type="submit">Send SMS</button>
