--- a/static/css/form.css
+++ b/static/css/form.css
@@ -4,3 +4,17 @@
   
   margin-top: 20px;
 }
+
+/* .container {
+  background-image: url(../img/background/tablet-6110623_1280.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+} */
+
+/* #form-signup {
+  background-image: url(../img/background/tablet-6110623_1280.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover; ;
+} */
