Set background images or color to routes

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,7 +1,9 @@
 /* CSS for login route */
 
 .form-login h1 {
-  
   margin-top: 20px;
 }
 
+#form-login {
+  background-color: rgb(59, 168, 154);
+}
