--- a/static/css/form.css
+++ b/static/css/form.css
@@ -5,16 +5,13 @@
   margin-top: 20px;
 }
 
-/* .container {
-  background-image: url(../img/background/tablet-6110623_1280.png);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-} */
+#form-signup {
 
-/* #form-signup {
-  background-image: url(../img/background/tablet-6110623_1280.png);
-  background-position: center center;
+  background-color: rgb(59, 168, 154);
+  /* background-image: url(../img/background/tablet-6110623_1280.png);
+  height: 100%;
+  width: 100%;
+  background-position: center;
   background-repeat: no-repeat;
-  background-size: cover; ;
-} */
+  background-size: cover; */
+}
