--- a/templates/base.html
+++ b/templates/base.html
@@ -35,8 +35,6 @@
 
         </head>
     <body>
-
-        <!-- if user_is is None...else  -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
             <a class="navbar-brand" href="/">SocialSesh</a>
@@ -59,7 +57,7 @@
                 <span class="nav-item">
 
                 </span>
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
                     {% if session.get("user_id") %}
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Logout</a>
@@ -70,7 +68,7 @@
             </div>
         </nav>
 
-        <!-- else display navbar with additional tabs -->
+      
 
     {% with messages = get_flashed_messages() %}
     {% if messages %}
