Add background color to remaining routes

--- a/templates/form.html
+++ b/templates/form.html
@@ -12,7 +12,7 @@
         <main class="form-signup">
           <form action="/form" id="createprofile" method="POST">
             <h1 class="h3 mb-3 fw-normal">To create profile, fill out the following:</h1>
-
+            <i class="fas fa-address-card"></i>
             <div class="form-floating">
               <input name="fname" type="fname" class="form-control" id="floatingFirst" placeholder="Jane">
               <label for="floatingInput">First name</label>
@@ -40,7 +40,7 @@
               </label>
             </div> -->
             <button class="btn btn-dark btn-lg" type="submit">Sign up</button>
-            <p class="mt-5 mb-3 text-muted">&copy; SocialSesh 2021</p>
+            <p class="mt-5 mb-3 text">&copy; SocialSesh 2021</p>
           </form>
         </main>
       </div>
