--- a/templates/login.html
+++ b/templates/login.html
@@ -26,6 +26,7 @@
         <main class="form-login">
           <form action="/login" id="login" method="POST">
             <h1 class="h3 mb-3 fw-normal">To view profile, please log-in:</h1>
+            <i class="fas fa-user-circle"></i>
             <div class="form-floating">
               <input name="email" type="email" class="form-control" id="floatingEmail" placeholder="jdoe@test.com">
               <label for="floatingPassword">Email</label>
@@ -41,7 +42,7 @@
               </label>
             </div>
             <button class="btn btn-dark btn-lg" type="submit">Log in</button>
-            <p class="mt-5 mb-3 text-muted">&copy; SocialSesh 2021</p>
+            <p class="mt-5 mb-3 text">&copy; SocialSesh 2021</p>
           </form>
         </main>
       </div>
