--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <div id="header" class="header">
     <div class="container">
         <div class="row">
-            <div class="col-lg-5 col-md-6">
+            <div class="col-lg-5 col-md-5">
                 <h1>SocialSesh</h1>
                 <p id="landing-page-description">Through online virtual events...</p>
                 <p id="landing-page-description">Let's safely interact!</p>
@@ -18,7 +18,7 @@
                 </form>
                 <form action="/login">
                     <p>
-                        <button type="submit" class="btn btn-dark btn-lg" id="login">Log in</button>
+                        <button type="submit" class="btn btn-dark btn-lg" id="login">Login</button>
                     </p>
                 </form>
             </div>
@@ -34,14 +34,17 @@
         </p>
         <div class="row">
             <div class="col-lg-4 col-md-4">
+                <i class="fas fa-users"></i>
                 <h4>Connect</h4>
                 <p>Meet with others who share similar interests.</p>
             </div>
             <div class="col-lg-4 col-md-4">
+                <i class="fas fa-palette"></i>
                 <h4>Create</h4>
-                <p>Set up events that bring value and importance to the community.</p>
+                <p>Set up events that bring value to the community.</p>
             </div>
             <div class="col-lg-4 col-md-4">
+                <i class="fas fa-comments"></i>
                 <h4>Contribute</h4>
                 <p>Support others ideas by attending events that catch your eye.</p>
             </div>
