--- a/templates/register.html
+++ b/templates/register.html
@@ -17,7 +17,7 @@
                 <label for="phone">Phone</label>
               </div>
               <button class="btn btn-dark btn-lg" type="submit">Send SMS</button>
-              <p class="mt-5 mb-3 text-muted">&copy; SocialSesh 2021</p>
+              <p class="mt-5 mb-3 text">&copy; SocialSesh 2021</p>
             </form>
           </main>
         </div>
