--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
     <div class="container">
         <h2>Join Today</h2>
         <p>
-            SocialSesh is a online platform that offers a place to meet with people all over the world. By attending online virtual events, you can maintain safe human interaction that will keep relationships alive.
+            SocialSesh is a online platform that safely brings people together. By attending our online virtual events, you maintain healthy human interactions to keep relationships alive.
         </p>
         <div class="row">
             <div class="col-lg-4 col-md-4">
@@ -46,7 +46,7 @@
             <div class="col-lg-4 col-md-4">
                 <i class="fas fa-comments"></i>
                 <h4>Contribute</h4>
-                <p>Support others ideas by attending events that catch your eye.</p>
+                <p>Support others by attending various events.</p>
             </div>
         </div>
     </div>
