--- a/templates/category_events.html
+++ b/templates/category_events.html
@@ -6,7 +6,7 @@
 
 <div id="event-category" class="event-category">
   <div class="container">
-    <h1>Choose the virtual event category you would like to view:</h1>
+    <h1>Select one event category:</h1>
     <form action="/api/category" id ="category" method = "POST">
       <select name="types" id = "types">
         <option value="select">Select</option>
@@ -17,7 +17,7 @@
       </select>
       <button type="submit" class="btn btn-dark">Submit</button>
   </form>
-</p>
+
   <ul id ="event_results">
   </ul>
   </div>
