--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,10 +12,9 @@
     </div>
   </div>
 </div>
-
 <div id="event-links" class="event-links">
   <div class="container">
-    <p>As you safely social distance, we have several events to keep you <strong>virtually</strong> close to others.</p> 
+    <p>As you safely social distance, we have several events to keep you <u>virtually</u> close to others.</p> 
     <div class="row">
       <div class="col-lg-4 col-md-4">
         <p><a href="/events">All events</a></p>
@@ -29,6 +28,5 @@
     </div>
   </div>
 </div>
-
 
 {% endblock %} 
