--- a/static/css/index.css
+++ b/static/css/index.css
@@ -34,6 +34,10 @@
   margin-top: 20px;
 }
 
+.header p{
+  font-size: 18px;
+}
+
 .header .btn {
   border-radius: 8px;
   margin: 40px 20px;
@@ -55,7 +59,7 @@
 
 .services p {
   color: #737373;
-  font-size: 14px;
+  font-size: 16px;
   padding-bottom: 40px;
 }
 
@@ -73,6 +77,8 @@
 
 body {
   background-color: white;
+  font-family: "Roboto", sans-serif;
+
 }
 
 p {
