--- a/static/css/thanks.css
+++ b/static/css/thanks.css
@@ -6,14 +6,14 @@
   box-sizing: border-box;
 }
 
-#confirmation-header {
-  background-image: url(../img/background/tablet-6110623_1280.png);
+/* #confirmation-header {
+  background-image: url(../img/background/video-call-6076978_1280.jpg);
   height: 620px;
   position: relative;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
+} */
 
 .confirmation-header {
   margin-top: 20px;
@@ -21,17 +21,17 @@
 
 .confirmation-header h1{
   margin-bottom: 0;
-  background: transparent;
+  /* background: transparent;
   background-color: rgb(240, 238, 238);
-  width: 450px
+  width: 450px */
 
 }
 .confirmation-header p {
   margin-bottom: 0;
   padding-bottom: 20px;
-  background: transparent;
+  /* background: transparent;
   background-color: rgb(240, 238, 238);
-  width: 450px;
+  width: 450px; */
 }
 
 .confirmation-header a {
