--- a/templates/index.html
+++ b/templates/index.html
@@ -57,9 +57,9 @@
         <div class="row">
             <div class="col">
                 <div class="mb-5 flex-center">
-                    <a href="https://github.com/senseofsteph/SocialSesh" class="fab fa-github"  target="_blank"></a>
-                    <a href="https://twitter.com" class="fab fa-twitter"  target="_blank"></a>
-                    <a href="https://linkedin.com/in/senseofsteph" class="fab fa-linkedin"  target="_blank"></a>
+                    <a href="https://www.github.com/senseofsteph/SocialSesh" class="fab fa-github" target="_blank"></a>
+                    <a href="https://www.twitter.com/senseofsteph" class="fab fa-twitter" target="_blank"></a>
+                    <a href="https://www.linkedin.com/in/senseofsteph" class="fab fa-linkedin" target="_blank"><a>
                 </div>
             </div>
         </div>
