--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -8,7 +8,7 @@
   <div class="container">
     <h1>Thank you for registering!</h1>
     <p>We've sent you a text message confirmation.</p> 
-    <p>Be safe and enjoy your online virtual social session.</p> 
+    <p>Be safe and enjoy your online social session.</p> 
     <div class="row">
       <div class="col-lg-3 col-md-3">
         <section id="profile">
@@ -23,20 +23,5 @@
     </div>
   </div>
 </div>
-
-
-<!-- <h5>Thank you for registering!</h5>
-
-<p>We've sent you a text message confirmation</p> 
-
-<p>Be safe and remember to enjoy your online virtual social session.</p> 
-
-<section id="event">
-  <a href="/events">Return to Events</a> 
-</section>
-
-<section id="logout">
-  <a href="/logout">Log Out</a>
-</section> -->
 
 {% endblock %}
