--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,12 @@
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
                 integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
+
             <!-- Font Awesome CDN -->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js" crossorigin></script>
+
+            <!-- <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
+            <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
 
 
             <!-- Google Fonts -->
