Update font awesome script; social media target is functioning accordingly

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,11 +11,8 @@
 
 
             <!-- Font Awesome CDN -->
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js" crossorigin></script>
-
-            <!-- <link rel="stylesheet" href="path/to/bootstrap/css/bootstrap.min.css">
-            <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css"> -->
-
+            <script src="https://kit.fontawesome.com/146c5fed2e.js" crossorigin="anonymous"></script>
+    
 
             <!-- Google Fonts -->
             <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
