--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -46,5 +46,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
+  /* height: 100px; */
 }
