--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,7 +8,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-md-6"></div>
-        <h1>Welcome!</h1>
+        <!-- <h1>Welcome!</h1> -->
     </div>
   </div>
 </div>
