Change background color

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,7 +1,7 @@
 /* CSS for profile route */
 
 #event-links {
-  background-color: #a9B3CE;
+  background-color: #9ebcc5;
 }
 
 .profile-header h1 {
