Adjust padding bottom for event links div

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -17,7 +17,8 @@
 
 .event-links p {
   font-size: 16px;
-  padding-bottom: 60px;
+  /* padding-bottom: 60px; */
+  padding-bottom: 150px;
 }
 
 .event-links a {
