--- a/templates/form.html
+++ b/templates/form.html
@@ -14,15 +14,15 @@
             <i class="fas fa-address-card"></i>
             <div class="form-floating">
               <input name="fname" type="fname" class="form-control" id="floatingFirst" placeholder="Jane">
-              <label for="floatingInput">First name</label>
+              <label for="floatingFirst">First name4</label>
             </div>
             <div class="form-floating">
               <input name="lname" type="lname" class="form-control" id="floatingLast" placeholder="Doe">
-              <label for="floatingInput">Last name</label>
+              <label for="floatingLast">Last name</label>
             </div>
             <div class="form-floating">
               <input name="email" type="email" class="form-control" id="floatingEmail" placeholder="jdoe@test.com">
-              <label for="floatingPassword">Email</label>
+              <label for="floatingInput">Email</label>
             </div>
             <div class="form-floating">
               <input name="password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
@@ -30,8 +30,12 @@
             </div>
             <div class="form-floating">
               <input name="phone" type="phone" class="form-control" id="floatingPhone" placeholder="Phone">
-              <label for="floatingPassword">Phone</label>
+              <label for="floatingPhone">Phone</label>
             </div>
+            <!-- <div class="form-floating">
+              <input name="image" type="url" class="form-control" id="floatingImage" placeholder="Image">
+              <label for="floatingImage">Image</label>
+            </div> -->
             <button class="btn btn-dark btn-lg" type="submit">Sign up</button>
             <p class="mt-5 mb-3 text">&copy; SocialSesh 2021</p>
           </form>
