Edit image div; upload instead of text

--- a/templates/form.html
+++ b/templates/form.html
@@ -14,7 +14,7 @@
             <i class="fas fa-address-card"></i>
             <div class="form-floating">
               <input name="fname" type="fname" class="form-control" id="floatingFirst" placeholder="Jane">
-              <label for="floatingFirst">First name4</label>
+              <label for="floatingFirst">First name</label>
             </div>
             <div class="form-floating">
               <input name="lname" type="lname" class="form-control" id="floatingLast" placeholder="Doe">
