Update jinja templating to properly pass in user image

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,11 +11,11 @@
     </div>
   </div>
 </div>
-<!-- <div id="profile-image" class="profile-image">
+<div id="profile-image" class="profile-image">
   <div class="container">
     <img src="{{ user.image }}">
   </div>
-</div> -->
+</div>
 <div id="event-links" class="event-links">
   <div class="container">
     <p>As you safely social distance, we have several events to keep you <u>virtually</u> close to others.</p> 
