--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,7 +13,7 @@
 </div>
 <!-- <div id="profile-image" class="profile-image">
   <div class="container">
-    <img src="{{ user.image }}">
+    <img src="{{ image }}">
   </div>
 </div> -->
 <div id="event-links" class="event-links">
