--- a/templates/profile.html
+++ b/templates/profile.html
@@ -13,7 +13,8 @@
 </div>
 <div id="profile-image" class="profile-image">
   <div class="container">
-    <img src="{{ image_file }}">
+    <div class="row">
+      <img src="{{ image_file }}">
   </div>
 </div>
 <div id="event-links" class="event-links">
