Update jinga template to image file

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
 <div id="profile-image" class="profile-image">
   <div class="container">
     <div class="row">
-      <img src="{{ user.image }}">
+      <img src="{{ image_file }}">
   </div>
 </div>
 <div id="event-links" class="event-links">
