--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,11 +11,11 @@
     </div>
   </div>
 </div>
-<div id="profile-image" class="profile-image">
+<!-- <div id="profile-image" class="profile-image">
   <div class="container">
     <div class="row">
       <img src="{{ image_file }}">
-  </div>
+  </div> -->
 </div>
 <div id="event-links" class="event-links">
   <div class="container">
