Add div class for image column

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,9 @@
 <div id="profile-image" class="profile-image">
   <div class="container">
     <div class="row">
-      <img src="{{ user.image }}">
+      <div class="col-lg-4 col-md-4">
+        <img src="{{ user.image }}">
+      </div>   
   </div>
 </div>
 <div id="event-links" class="event-links">
