Image css in progress, errors persist

--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -9,7 +9,9 @@
 }
 
 .profile-image {
-  justify-content: right;
+  /* justify-content: right; */
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /* EVENT LINKS */
