--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -10,8 +10,7 @@
 
 .profile-image {
   /* justify-content: right; */
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px 0 0 0;
 }
 
 /* EVENT LINKS */
