--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -13,21 +13,20 @@
 }
 
 img {
-  height: 100px;
-  width: 100px
+  height: 150px;
+  width: 150px
 }
 
 /* EVENT LINKS */
 
 .event-links {
-  padding: 10px 0 0px;
+  /* margin: 0px 0 0 0; */
   text-align: center;
 }
 
 .event-links p {
   font-size: 16px;
-  /* padding-bottom: 60px; */
-  padding-bottom: 300px;
+  padding-bottom: 100px;
 }
 
 .event-links a {
