Add to-do regarding user buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
 
 {% block body %}
 
+<!-- TODO: minimize space between sign up and login buttons -->
+
 <div id="header" class="header">
     <div class="container">
         <div class="row">
