Place buttons in seperate rows

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,18 @@
                 <p id="landing-page-description">Through online virtual events...</p>
                 <p id="landing-page-description">Let's safely interact!</p>
                 <form action="/form">
-                    <p>
-                        <button type="submit" class="btn btn-dark btn-lg" id="create">Signup</button>
-                    </p>
+                    <div class="row">
+                        <p>
+                            <button type="submit" class="btn btn-dark btn-lg" id="create">Signup</button>
+                        </p>
+                    </div>
                 </form>
                 <form action="/login">
-                    <p>
-                        <button type="submit" class="btn btn-dark btn-lg" id="login">Login</button>
-                    </p>
+                    <div class="row">
+                        <p>
+                            <button type="submit" class="btn btn-dark btn-lg" id="login">Login</button>
+                        </p>
+                    </div>
                 </form>
             </div>
         </div>
