--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
 <div id="header" class="header">
     <div class="container">
         <div class="row">
-            <div class="col-lg-5 col-md-5">
+            <!-- <div class="col-lg-5 col-md-5"> -->
+            <div class="col-md-5">
                 <h1>SocialSesh</h1>
                 <p id="landing-page-description">Through online virtual events...</p>
                 <p id="landing-page-description">Let's safely interact!</p>
