Add media screen css to fix header text responsiveness; wip

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -47,6 +47,18 @@
   border: 1px solid #fff !important;
 }
 
+/* @media screen and (max-width: 768px) {
+  .header h1
+  .header p
+  .header .btn 
+}
+
+@media screen and (max-width: 420px) {
+  .header h1
+  .header p
+  .header .btn 
+} */
+
 /* SERVICES */
 
 .services {
