Create to-do items list; header text and image

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
 
 {% block body %}
 
+<!-- TODO: Add image to the same row header text -->
+
 <div id="header" class="header">
     <div class="container">
         <div class="row">
