Add additional item

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,10 @@
 
 {% block body %}
 
-<!-- TODO: Add image to the same row header text -->
+<!-- TODO: 
+    Add image to the same row header text
+    Update demo app gif
+-->
 
 <div id="header" class="header">
     <div class="container">
