Update to-do notes

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% block body %}
 
 <!-- TODO: 
-    Add image to the same row header text
+    shrink header text to be more responsive in div
 -->
 
 <div id="header" class="header">
